src/test/resources/failing/fail49.pnd
@type Animal
@type Cat : Animal

Cat:byStr(x, y) : int, int
Animal:byStr(x, y) : int, int